[package]
name = "weather"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
chrono = "0.4.42"
ratatui = "0.30.0"
color-eyre = "0.6.5"
artem = "3.0.0"
tui-big-text = "0.8.2"
dirs = "6.0.0"
